fix for scrollbars in import

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -3917,7 +3917,7 @@ div.hasHalfs{
     position: absolute;
     right: 0;
     width: 100%;
-    overflow-y: scroll !important;
+    //overflow-y: scroll !important;
     a, a:link, a:visited{
         display: block;
     }
